k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  # HA
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: backend
          # Minikube
          # image: todo-backend:latest
          # imagePullPolicy: Never # Forces Minikube to use the local image
          # ECR
          image: 131912109503.dkr.ecr.us-east-2.amazonaws.com/todo-backend-repo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          # Resource Requests and Limits
          resources:
            requests:
              memory: 128Mi
              cpu: 256m
            limits:
              memory: 256Mi
              cpu: 512m

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP # ClusterIP means it's only accessible from inside the K8s cluster
