k8s/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: postgres
          image: postgres:18-alpine
          imagePullPolicy: IfNotPresent # We pull this from DockerHub, not local
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: 64M
              cpu: 128m
            limits:
              memory: 128M
              cpu: 256m

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: init-script
          configMap:
            name: db-init # We will create this via CLI

---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
